@startuml
hide methods
left to right direction

Title "Domain Model - Ranking Candidates"

skinparam class {
    LifeLineBorderColor DarkBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFFF
    ArrowColor grey
    BorderColor black
}

skinparam packageStyle rectangle

skinparam card {
    LifeLineBorderColor Green
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFDD
    ArrowColor DarkGrey
    BorderColor Black
}

package "Customer Manager Aggregate"{
entity CustomerManager <<entity>><<root>>
}

package "User Aggregate"{
entity User <<entity>><<root>>

    card UserEmail <<Value Object>> {
    }
    card UserName <<Value Object>> {
    }
    card UserPassword <<Value Object>> {
    }
    card Username<<Value Object>> {
    }

    User --> UserEmail
    User --> UserName
    User --> Username
    User --> UserPassword

}

package "Application Aggregate"{
entity Application <<entity>><<root>>

    card ApplicationFiles <<Value Object>>{
    }
    card Status <<Value Object>>{
    }
    card SubmissionDate <<Value Object>>{
    }
    card Rank <<Value Object>>{
    }

    Application --> ApplicationFiles
    Application --> Status
    Application --> SubmissionDate
    Application --> Rank

    note right of Status
        Can be one of the following:
        - submitted
        - pending
        - accepted
        - declined
    end note

    note right of ApplicationFiles
        Can be one of the following:
        - text file with the contents of the email
        - file for each file attached to the email
        - text file with the contents of each file attached to the email
        - text file with the data of the application and candidate
    end note

}

package "Job Opening Aggregate"{
entity JobOpening <<entity>><<root>>

    card JobReference <<Value Object>> {
    }
    card TitleOrFunction <<Value Object>> {
    }
    card ContractType <<Value Object>> {
    }
    card Mode <<Value Object>> {
    }
    card Address <<Value Object>> {
    }
    card VacanciesNumber <<Value Object>> {
    }
    card Description <<Value Object>> {
    }

    JobOpening --> JobReference
    JobOpening --> TitleOrFunction
    JobOpening --> ContractType
    JobOpening --> Mode
    JobOpening --> Address
    JobOpening --> VacanciesNumber
    JobOpening --> Description

    note right of ContractType
        Can be one of the following:
        - full-time
        - part-time
    end note

    note right of Mode
         Can be one of the following:
         - remote
         - hybrid
         - onsite
    end note

}

package "Job Requirements Specification Aggregate"{
entity JobRequirementsSpecification <<entity>><<root>>

    entity Requirements <<entity>>

    JobRequirementsSpecification --> Requirements

}

package "Customer Aggregate"{
entity Customer <<entity>><<root>>

    card EmailAddress <<Value Object>>{
    }

    Customer --> EmailAddress
}

package "Candidate Aggregate"{
entity Candidate <<entity>><<root>>

    card Curriculum <<Value Object>> {
    }
    card TelephoneNumber <<Value Object>>{
    }

    Candidate --> Curriculum
    Candidate --> TelephoneNumber
}

JobOpening "1" <-- "N " Application : has
JobOpening "N" ---> "1" Customer : associated
Application "N" ---> "1" Candidate
JobRequirementsSpecification "1" <--- "N" JobOpening : associated
CustomerManager "1" ---> "N" JobOpening : manages
CustomerManager "1" ---> "N" Customer : registers

Candidate --> User
Customer ---> User
CustomerManager ---> User

@enduml